Edit main layout to only use grid

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="container">
         <div class="header">
             <div class="top-row">
-                <div>
+                <div class="search">
                     <img src="images/magnify.svg">
                     <input type="text">
                 </div>
-                <div>
+                <div class="profile">
                     <img src="images/bell-ring-outline.svg">
                     <img src="images/surf.jpg">
                     <p>Nick Preziosi</p>
